# Multi-tenant-arch

aviation-mas-a2a/: .env.example  README.md  adk_config.yaml  main.py  pyproject.toml  start_adk.py
aviation-mas-a2a/src/aviation_mas_a2a/: __init__.py  app.py
aviation-mas-a2a/src/aviation_mas_a2a/agents/: __init__.py  agent.py  agent_manager.py  aviation_agent.py  base_agent.py  base_agent_adk.py  root_agent.py
aviation-mas-a2a/src/aviation_mas_a2a/mcp_servers/: __init__.py  hr_tools.py  meeting_tools.py  supply_chain_tools.py
aviation-mas-a2a/src/aviation_mas_a2a/shared/: __init__.py  config.py  logging_config.py
aviation_agents/: .env  PROJECT_STRUCTURE.md  README.md  main.py  pyproject.toml  requirements.txt
aviation_agents/.adk/: config.json
aviation_agents/base_agent/: __init__.py  root_agent.py
aviation_agents/base_agent/agent/: __init__.py  root_agent.py
aviation_agents/executors/: __init__.py  base_executor.py  hr_executor.py  meeting_executor.py  orchestrator_executor.py  supply_chain_executor.py
aviation_agents/mcp_servers/: __init__.py
aviation_agents/mcp_servers/hr_server/: __init__.py  models.py  tools.py  tools_backup.py
aviation_agents/mcp_servers/meeting_server/: models.py  tools.py  tools_backup.py
aviation_agents/mcp_servers/supply_chain_server/: models.py  tools.py  tools_backup.py
